--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav id="bar">
 			<img src="https://img.icons8.com/ios/50/000000/spiral-bulb.png"/>
 			
-			<h1><a href="/">Waitingly Efficient</a></h1>
+			<h1><a href="/waitinglyEfficient">Waitingly Efficient</a></h1>
 		</nav>
 
 		<div id="viewbox">
@@ -16,7 +16,7 @@
 			<p>
 				Works uploaded here (finished or not) in no order:
 				<ol>
-					<li><a href="/stories/Sawyer_Wren.html">Sawyer Wren</a></li>
+					<li><a href="/waitinglyEfficient/stories/Sawyer_Wren.html">Sawyer Wren</a></li>
 				</ol>
 			</p>
 		</div>
