--- a/stories/Sawyer_Wren.html
+++ b/stories/Sawyer_Wren.html
@@ -8,7 +8,7 @@
 		<nav id="bar">
 			<img src="https://img.icons8.com/ios/50/000000/spiral-bulb.png"/>
 			
-			<h1><a href="/">Waitingly Efficient</a></h1>
+			<h1><a href="/waitinglyEfficient">Waitingly Efficient</a></h1>
 		</nav>
 
 		<div id="viewbox">
