--- a/stories/Sawyer_Wren.html
+++ b/stories/Sawyer_Wren.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Waitingly Efficient</title>
-		<link rel="stylesheet" href="swanstyle.css">
+		<link rel="stylesheet" href="../swanstyle.css">
 	</head>
 
 	<body>
